build: add stylePreprocessorOptions to angular.json

--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,11 @@
             "assets": [
               "src/assets"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "styles": [
               "src/styles.scss"
             ],
@@ -90,6 +95,11 @@
             "assets": [
               "src/assets"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "styles": [
               "src/styles.scss"
             ],
