build: init FEM project (#1)
* fix: remove JSON comments (CodeQL)

* feat: remove favicon.ico

* feat: add FEM favicon

* build: add stylePreprocessorOptions to angular.json

* build: remove .editorconfig

* build: update VS Code settings

* feat: reset HTML

* docs: update README

* legal: add LICENSE

* build: add .browserslistrc

* feat: import styles

* feat: add Google fonts

* scm: remove .gitkeep

--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,13 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "styles": [
               "src/styles.scss"
             ],
@@ -89,9 +93,13 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "styles": [
               "src/styles.scss"
             ],
